--- a/unstar/angular.json
+++ b/unstar/angular.json
@@ -49,10 +49,15 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -116,7 +121,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -150,8 +155,5 @@
       }
     }
   },
-  "defaultProject": "unstar",
-  "cli": {
-    "analytics": "0f9d9be9-a062-4d90-ad20-2adf9dddcbae"
-  }
+  "defaultProject": "unstar"
 }
