--- a/unstar/tsconfig.json
+++ b/unstar/tsconfig.json
@@ -13,6 +13,8 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "strictPropertyInitialization": false,
+    "strictNullChecks": false,
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
@@ -24,6 +26,6 @@
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": false
   }
 }
