--- a/unstar/tsconfig.json
+++ b/unstar/tsconfig.json
@@ -17,6 +17,7 @@
     "strictNullChecks": false,
     "importHelpers": true,
     "target": "es2015",
+    "allowSyntheticDefaultImports": true,
     "module": "es2020",
     "lib": [
       "es2018",
